fixed blockchain shape on mobile devices

--- a/src/styles/main_page.scss
+++ b/src/styles/main_page.scss
@@ -249,11 +249,13 @@
               }
               @media (max-width: 1440px) {
                 width: 100%;
+                height: auto;
               }
               @media (max-width: 500px) {
               animation-duration: 5s;
               width: 100%;
-                @keyframes blockchain {
+              height: auto;
+              @keyframes blockchain {
                   0%   {margin-top: 0%;}
                   100%  {margin-top: 5%;}
                 }
